@@ -1,5 +1,7 @@
 ikiwiki (2.60) UNRELEASED; urgency=low
  
+  * Starting with this version, "ikiwiki -setup /etc/ikiwiki/simple.setup"
+    can be used set up a new wiki in seconds.
   * Add getsetup hook, all plugins that add fields to %config should use it.
   * ikiwiki --dumpsetup can generate a nice setup file snapshotting ikiwiki's
     current configuration.
